src/MagicMap.IntegrationTests/Tests/InvalidOverrides/NonStaticDefaultMapper/Animal.cs
// --------------------------------------------------------------------------------------------------------------------
// <copyright file="Animal.cs" company="KUKA Deutschland GmbH">
//   Copyright (c) KUKA Deutschland GmbH 2006 - 2023
// </copyright>
// --------------------------------------------------------------------------------------------------------------------

namespace MagicMap.IntegrationTests.Tests.InvalidOverrides.NonStaticDefaultMapper
{
    public class Animal
    {
        public string Name { get; set; }
    }
}
